# advent-of-code

./: Cargo.toml  README.md
2019/: day 1.js
2020/01/: Cargo.toml
2020/01 - expense report/src/: main.rs
2020/02/: Cargo.toml
2020/02/src/: main.rs
2020/03 - toboggan trajectory/: Cargo.toml
2020/03/src/: main.rs
2020/04/: Cargo.toml
2020/04/src/: main.rs
2020/05/: Cargo.toml
2020/05 - binary boarding/src/: main.rs
2020/06 - custom customs/src/: main.rs
2020/06 - customs questions/: Cargo.toml
2020/07 - handy haversacks/: Cargo.toml
2020/07 - handy haversacks/src/: main.rs
2020/08 - console instructions/src/: main.rs
2020/08 - handheld halting/: Cargo.toml
2020/08 - handheld halting/src/: main.rs
2020/09 - xmas encryption/: Cargo.toml
2020/09 - xmas encryption/src/: main.rs
2020/10 - adapter array/: Cargo.toml
2020/10 - adapter array/src/: main.rs
2020/11 - seating system/: Cargo.toml
2020/11 - seating system/src/: main.rs
2020/12 - rain risk/: Cargo.toml
2020/13 - shuttle search/: Cargo.toml
2023/day-01-trebuchet/: Cargo.toml
2023/day-02-cube-conundrum/: Cargo.toml
2023/day-03-gear-ratios/: Cargo.toml
2023/day-04-scratchcards/: Cargo.toml
2023/day-05-if-you-give-a-seed-a-fertilizer/: Cargo.toml  sample.txt
2023/day-06-wait-for-it/: Cargo.toml
2023/day-07-camel-cards/: Cargo.toml
2023/day-08-haunted-wasteland/: Cargo.toml
2023/day-09-mirage-maintenance/: Cargo.toml
2023/day-10-pipe-maze/: Cargo.toml
2023/day-11-cosmic-expansion/: Cargo.toml
2023/day-12-hot-springs/: Cargo.toml
(+14 files in other folders)
