[workspace]
resolver = "2"
members = [
  "2023/common",
  "2023/day-01-trebuchet",
  "2023/day-02-cube-conundrum",
  "2023/day-03-gear-ratios",
  "2023/day-04-scratchcards",
  "2023/day-05-if-you-give-a-seed-a-fertilizer",
  "2023/day-06-wait-for-it",
  "2023/day-07-camel-cards",
  "2023/day-08-haunted-wasteland",
  "2023/day-09-mirage-maintenance",
  "2023/day-10-pipe-maze",
]
